# motoko

./: .claude-agent.yml  .env.example  .gitignore  AGENT_OS.md  AGENT_OS_SUMMARY.md  BATOU.md  CLAUDE.md  CONTEXT_LAKE.md  CONVENTIONS.md  Caddyfile  DESIGN_DISCUSSION.md  EPICS.md  ISHIKAWA.md  LICENSE  MAJOR.md  MOTOKO.md  MOTOKO_SPEC.md  README.md  ROADMAP.md  SPEC.md  TACHIKOMA.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/skills/tachikoma-structure/: SKILL.md
api/: Dockerfile  agent.py  auth.py  database.py  main.py  pyproject.toml
api/static/: index.html
batou/: README.md  pyproject.toml
batou/src/batou/: __init__.py  entities.py  library.py  schema.py  server.py
examples/: agent_loop.py  agent_loop_mock.py  basic_chat.py  role_management.py  skills_usage.py  streaming_basic.py  streaming_fastapi.py  tool_usage.py
major/: README.md  pyproject.toml
major/src/major/: __init__.py  agent.py  config.py  docx_export.py  librarian.py  library.py  organize.py  podcast.py  prompt.py  server.py  sessions.py  tools.py  worker.py
motoko/: __init__.py  __main__.py  agent.py  streaming.py  types.py
motoko/cli/: __init__.py  chat.py  formatting.py  main.py
motoko/companies/: __init__.py  manager.py
motoko/mcp/: __main__.py  server.py
motoko/models/: __init__.py  anthropic.py  base.py  factory.py  gemini.py
motoko/projects/: __init__.py  manager.py
motoko/skills/: __init__.py  loader.py  skill.py
motoko/tasks/: __init__.py  manager.py
motoko/tools/: __init__.py  base.py  bash.py  files.py  git.py  web.py
reports/: pyproject.toml
reports/src/reports/: __init__.py  report_tools.py  server.py
scripts/: auto-commit.sh  sdk_investigation.py
skills/: code-review.md  refactor-suggestions.md  search-and-explain.md  summarize-file.md
tachikoma/: Dockerfile  prompt.md  pyproject.toml
tachikoma/src/tachikoma/: __init__.py  agent.py  cli.py  tools.py
tachikoma/src/tachikoma/prompts/: __init__.py  base.py  frontmatter.py  schema.py  structure.py
tasks/: 000001-fix-gemini-streaming-bug.md  000002-add-task-management-system.md  000003-COMPLETED-build-cli-interface.md
tests/: conftest.py  test_agent.py  test_types.py
tests/integration/: conftest.py  test_agent.py  test_models.py  test_roles.py
workspaces/example/: .mcp.json
workspaces/example/.claude/: schema.yaml
workspaces/example/notes/: welcome.md
workspaces/example/projects/: DEMO.md
workspaces/example/tasks/: explore-features.md  setup-workspace.md
