[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motoko"
version = "0.1.0"
description = "A Python package for building role-based AI agents with model flexibility and tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joshua Cook", email = "root@joshuacook.net"}
]
keywords = ["ai", "agents", "llm", "claude", "gemini", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # AI Model SDKs
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    # HTTP clients
    "httpx>=0.27.0",
    # Async support
    "asyncio>=3.4.3",
    # Type hints
    "typing-extensions>=4.12.0",
    # Data validation
    "pydantic>=2.0.0",
    # YAML parsing (for skills)
    "pyyaml>=6.0.0",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "prompt-toolkit>=3.0.52",
    "mcp>=1.21.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",

    # Type checking
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",

    # Linting
    "ruff>=0.6.0",

    # Development tools
    "ipython>=8.12.0",
]

[project.scripts]
motoko = "motoko.cli:cli"

[project.urls]
Homepage = "https://github.com/joshuacook/motoko"
Repository = "https://github.com/joshuacook/motoko"
Issues = "https://github.com/joshuacook/motoko/issues"

[tool.hatch.build.targets.wheel]
packages = ["motoko"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["motoko"]
