[project]
name = "major"
version = "0.1.0"
description = "Major chat agent - Claude Agent SDK wrapper for interactive conversations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/major"]
