[project]
name = "reports"
version = "0.1.0"
description = "MCP server for report storage and retrieval"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
reports = "reports.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reports"]
